feat(survey): add interactive preview mode with page flow support
- Implement interactive mode for radio and select questions in survey preview
- Add answer tracking and page flow resolution logic
- Update UI styles for interactive elements and flow hints
- Extend page flow support to select question type

--- a/apps/web/src/app/builder/question-dialog.component.html
+++ b/apps/web/src/app/builder/question-dialog.component.html
@@ -155,19 +155,17 @@
               />
             </mat-form-field>
             @if (showPageFlow) {
-            <mat-form-field
-              appearance="outline"
-              class="flow-field"
-              formGroupName="pageFlow"
-            >
-              <mat-label>Go to</mat-label>
-              <mat-select formControlName="goToPage">
-                <mat-option [value]="null">Next page</mat-option>
-                @for (pageNum of data.pageNumbers; track pageNum) {
-                <mat-option [value]="pageNum">Page {{ pageNum }}</mat-option>
-                }
-              </mat-select>
-            </mat-form-field>
+            <div formGroupName="pageFlow" class="flow-wrapper">
+              <mat-form-field appearance="outline" class="flow-field">
+                <mat-label>Go to</mat-label>
+                <mat-select formControlName="goToPage">
+                  <mat-option [value]="null">Next page</mat-option>
+                  @for (pageNum of data.pageNumbers; track pageNum) {
+                  <mat-option [value]="pageNum">Page {{ pageNum }}</mat-option>
+                  }
+                </mat-select>
+              </mat-form-field>
+            </div>
             }
             <button
               mat-icon-button
