--- a/apps/web/src/app/app.component.html
+++ b/apps/web/src/app/app.component.html
@@ -68,7 +68,7 @@
         <mat-icon>dashboard</mat-icon>
         <span>Dashboard</span>
       </button>
-      <button mat-menu-item disabled>
+      <button mat-menu-item routerLink="/settings">
         <mat-icon>settings</mat-icon>
         <span>Settings</span>
       </button>
