refactor(surveys): replace label with span in question components
update file upload handling to support FormArray
change upload API endpoints to use query params
remove hardcoded apiUrl from upload service

--- a/apps/web/src/app/surveys/components/radio-question.component.html
+++ b/apps/web/src/app/surveys/components/radio-question.component.html
@@ -1,6 +1,6 @@
 <div [formGroup]="form">
-  <label class="q-label" [attr.for]="question.id"
-    >{{ question.text }}{{ question.required ? " *" : "" }}</label
+  <span class="q-label"
+    >{{ question.text }}{{ question.required ? " *" : "" }}</span
   >
   <mat-radio-group
     [formControlName]="question.id"
