--- a/apps/web/src/app/surveys/components/checkbox-question.component.html
+++ b/apps/web/src/app/surveys/components/checkbox-question.component.html
@@ -1,6 +1,6 @@
 <div [formGroup]="form">
-  <label class="q-label" [attr.for]="question.id"
-    >{{ question.text }}{{ question.required ? " *" : "" }}</label
+  <span class="q-label"
+    >{{ question.text }}{{ question.required ? " *" : "" }}</span
   >
   <div class="checkbox-group">
     @for (a of answers(); track a) {
